# forge-cute-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ruff-format.yml
bench/: __init__.py  benchmark_online_softmax.py  benchmark_reduce.py  modal_bench.py  run.py  runner.py  suites.yaml
forge_cute_py/kernels/: reduce.py  reduce_sum.py  softmax_online.py
forge_cute_py/ops/: __init__.py  reduce.py  reduce_sum.py  softmax_online.py
forge_cute_py/ref/: __init__.py  reduce.py  reduce_sum.py  softmax_online.py
scripts/: ncu_extract.py  profile.sh
tests/: test_reduce.py  test_softmax_online.py
